rename function to CatalogedFunction